--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Display property</title>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title>Display property</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-    </head>
+        </head>
         <body>
             <div class="block"></div>
             <span class="inline">This is an inline element.</span>
 
             <p>Lorem ipsum dolor sit amet <span class="display-inline">consectetur</span>, adipisicing elit. Officia inventore alias corporis doloremque unde accusamus dolor soluta saepe rem, dolores accusantium ipsum voluptatem magni eius voluptate sapiente, maxime laborum voluptates!</p>
+            
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut nulla esse est iure dicta! Optio recusandae dolor quidem <span class="display-inline-block">quisquam</span> beatae amet id tenetur, odit, dignissimos repellat nesciunt doloribus, natus sed! </div>
 
-
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut nulla esse est iure dicta! Optio recusandae dolor quidem <span class="display-block">quisquam</span> beatae amet id tenetur, odit, dignissimos repellat nesciunt doloribus, natus sed! </div>
         </body>
 </html>
